--- a/src/css/LineCalendar.module.css
+++ b/src/css/LineCalendar.module.css
@@ -22,6 +22,10 @@
   color: #ACADAD;
 }
 
+.day:hover, .calendarChangeDateIcons:hover {
+  cursor: pointer;
+}
+
 .day:focus {
   border: none;
   outline: none;
